src/test/ui/consts/const_in_pattern/no-eq-branch-fail.stderr
error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/no-eq-branch-fail.rs:21:9
   |
LL |         BAR_BAZ => panic!(),
   |         ^^^^^^^

error: aborting due to previous error

